# reachy_mini_countdown

./: .gitignore  HOW_IT_WORKS.md  README.md  VIDEO_RECORDING.md  index.html  main.py  pyproject.toml  run_now.sh  start.sh  style.css
reachy_mini_countdown/: __init__.py  main.py
