[project]
name = "reachy-mini-countdown"
version = "0.1.0"
description = "Countdown timer with celebration dance for Reachy Mini"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
keywords = ["reachy-mini", "robot", "countdown", "celebration", "new-year"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "reachy-mini",
    "flask",
    "yt-dlp",
    "opencv-python",
    "numpy",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/t1c1/reachy_mini_countdown"
Repository = "https://github.com/t1c1/reachy_mini_countdown"

[project.entry-points.reachy_mini_apps]
reachy-mini-countdown = "reachy_mini_countdown.main:ReachyMiniCountdown"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reachy_mini_countdown"]
